--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,25 @@ group = 'bosch.bh.test'
 version = '1.0-SNAPSHOT'
 
 repositories {
+  maven {
+    credentials {
+      username "$rbArtifactoryUser"
+      password "$rbArtifactoryPassword"
+    }
+    url "https://rb-artifactory.bosch.com/artifactory/maven-central-remote/"
+  }
+
+  maven {
+    credentials {
+      username "$rbArtifactoryUser"
+      password "$rbArtifactoryPassword"
+    }
+    authentication {
+      basic(BasicAuthentication)
+    }
+    url = "https://rb-artifactory.bosch.com/artifactory/bhp-eat-spexjava-local/"
+  }
+
   mavenCentral()
 }
 
@@ -16,6 +35,7 @@ dependencies {
 test {
   useJUnitPlatform()
 }
+
 kotlin {
   jvmToolchain(21)
 }
